--- a/package.json
+++ b/package.json
@@ -27,15 +27,30 @@
     "preinstall": "npx only-allow pnpm"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@nrwl/tao": "11.5.2",
     "@nrwl/cli": "11.5.2",
+    "@nrwl/devkit": "11.5.2",
+    "@nrwl/eslint-plugin-nx": "11.5.2",
+    "@nrwl/jest": "11.5.2",
+    "@nrwl/linter": "11.5.2",
+    "@nrwl/node": "11.5.2",
+    "@nrwl/nx-plugin": "^11.5.2",
+    "@nrwl/tao": "11.5.2",
     "@nrwl/workspace": "11.5.2",
+    "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "dotenv": "8.2.0",
+    "eslint": "7.10.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "26.2.2",
+    "prettier": "2.2.1",
+    "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
-    "typescript": "~4.0.3",
-    "prettier": "2.2.1"
+    "tslib": "^2.0.0",
+    "typescript": "~4.0.3"
   }
 }
