--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test",
+    "test": "nx run-many --target=test --all",
     "lint": "nx workspace-lint && nx lint",
-    "e2e": "nx e2e",
+    "e2e": "nx run-many --target=e2e --all",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -28,6 +28,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@angular-devkit/core": "^11.2.6",
     "@nrwl/cli": "11.5.2",
     "@nrwl/devkit": "11.5.2",
     "@nrwl/eslint-plugin-nx": "11.5.2",
