--- a/libs/typescript-project-references/package.json
+++ b/libs/typescript-project-references/package.json
@@ -3,5 +3,9 @@
   "version": "0.0.1",
   "main": "src/index.js",
   "generators": "./generators.json",
-  "executors": "./executors.json"
+  "executors": "./executors.json",
+  "dependencies": {
+    "@types/fs-extra": "^9.0.9",
+    "execa": "^5.0.0"
+  }
 }
