--- a/nx.json
+++ b/nx.json
@@ -20,6 +20,8 @@
     "typescript-project-references-e2e": {
       "tags": [],
       "implicitDependencies": ["typescript-project-references"]
-    }
+    },
+    "nx-esbuild": { "tags": [] },
+    "nx-esbuild-e2e": { "tags": [], "implicitDependencies": ["nx-esbuild"] }
   }
 }
