--- a/libs/nx-esbuild/package.json
+++ b/libs/nx-esbuild/package.json
@@ -8,6 +8,8 @@
         "execa": "^5.0.0"
     },
     "peerDependencies": {
-        "esbuild": "^0.11.5"
+        "esbuild": "^0.11.0",
+        "nodemon": "^2.0.0",
+        "dotenv": "^8.0.0"
     }
 }
