Setup builds and package pubishing

--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "name": "nx-generators",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "nx": "nx",
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx run-many --target=test --all",
-    "lint": "nx workspace-lint && nx lint",
-    "e2e": "nx run-many --target=e2e --all",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "preinstall": "npx only-allow pnpm"
-  },
-  "private": true,
-  "devDependencies": {
-    "@angular-devkit/core": "^11.2.6",
-    "@nrwl/cli": "11.5.2",
-    "@nrwl/devkit": "11.5.2",
-    "@nrwl/eslint-plugin-nx": "11.5.2",
-    "@nrwl/jest": "11.5.2",
-    "@nrwl/linter": "11.5.2",
-    "@nrwl/node": "11.5.2",
-    "@nrwl/nx-plugin": "^11.5.2",
-    "@nrwl/tao": "11.5.2",
-    "@nrwl/workspace": "11.5.2",
-    "@types/jest": "26.0.22",
-    "@types/node": "14.14.36",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
-    "dotenv": "8.2.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "jest": "26.6.3",
-    "prettier": "2.2.1",
-    "ts-jest": "26.5.4",
-    "ts-node": "~9.1.1",
-    "tslib": "^2.0.0",
-    "typescript": "~4.2.3"
-  }
+    "name": "nx-generators",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "nx": "nx",
+        "start": "nx serve",
+        "build": "nx run-many --target=build --all",
+        "test": "nx run-many --target=test --all",
+        "lint": "nx workspace-lint && nx lint",
+        "e2e": "nx run-many --target=e2e --all",
+        "affected:apps": "nx affected:apps",
+        "affected:libs": "nx affected:libs",
+        "affected:build": "nx affected:build",
+        "affected:e2e": "nx affected:e2e",
+        "affected:test": "nx affected:test",
+        "affected:lint": "nx affected:lint",
+        "affected:dep-graph": "nx affected:dep-graph",
+        "affected": "nx affected",
+        "format": "nx format:write",
+        "format:write": "nx format:write",
+        "format:check": "nx format:check",
+        "update": "nx migrate latest",
+        "workspace-generator": "nx workspace-generator",
+        "dep-graph": "nx dep-graph",
+        "help": "nx help",
+        "preinstall": "npx only-allow pnpm",
+        "changesets": "changesets"
+    },
+    "private": true,
+    "devDependencies": {
+        "@angular-devkit/core": "^11.2.6",
+        "@changesets/cli": "^2.15.0",
+        "@nrwl/cli": "11.5.2",
+        "@nrwl/devkit": "11.5.2",
+        "@nrwl/eslint-plugin-nx": "11.5.2",
+        "@nrwl/jest": "11.5.2",
+        "@nrwl/linter": "11.5.2",
+        "@nrwl/node": "11.5.2",
+        "@nrwl/nx-plugin": "^11.5.2",
+        "@nrwl/tao": "11.5.2",
+        "@nrwl/workspace": "11.5.2",
+        "@types/jest": "26.0.22",
+        "@types/node": "14.14.36",
+        "@typescript-eslint/eslint-plugin": "4.19.0",
+        "@typescript-eslint/parser": "4.19.0",
+        "dotenv": "8.2.0",
+        "eslint": "7.22.0",
+        "eslint-config-prettier": "8.1.0",
+        "jest": "26.6.3",
+        "prettier": "2.2.1",
+        "ts-jest": "26.5.4",
+        "ts-node": "~9.1.1",
+        "tslib": "^2.0.0",
+        "typescript": "~4.2.3"
+    }
 }
