--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+dist
 /tmp
 /out-tsc
+tsconfig.tsbuildinfo
+
 
 # dependencies
 node_modules
