--- a/libs/typescript-project-references/package.json
+++ b/libs/typescript-project-references/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wanews/nx-typescript-project-references",
   "version": "0.1.1",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "generators": "./generators.json",
   "executors": "./executors.json",
   "dependencies": {
