--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@nrwl/nx-plugin": "^11.5.2",
         "@nrwl/tao": "11.5.2",
         "@nrwl/workspace": "11.5.2",
+        "@types/execa": "^2.0.0",
         "@types/jest": "26.0.22",
         "@types/node": "14.14.36",
         "@typescript-eslint/eslint-plugin": "4.19.0",
