Fixed build steps for nx plugins

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,9 @@ jobs:
         run: |
           pnpm install --frozen-lockfile
 
+      - name: type scheck
+        run: pnpx tsc -b
+
       - name: Build packages
         run: pnpm run build
 
