--- a/libs/typescript-project-references/tsconfig.json
+++ b/libs/typescript-project-references/tsconfig.json
@@ -1,15 +1,8 @@
 {
-  "extends": "../../tsconfig.settings.json",
-  "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "types": [
-      "jest",
-      "node"
-    ]
-  },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ]
+    "extends": "../../tsconfig.settings.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "types": ["jest", "node"]
+    },
+    "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
