--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "@nrwl/nx-plugin": "^11.5.2",
         "@nrwl/tao": "11.5.2",
         "@nrwl/workspace": "11.5.2",
-        "@types/execa": "^2.0.0",
         "@types/jest": "26.0.22",
         "@types/node": "14.14.36",
         "@typescript-eslint/eslint-plugin": "4.19.0",
@@ -54,5 +53,11 @@
         "ts-node": "~9.1.1",
         "tslib": "^2.0.0",
         "typescript": "~4.2.3"
+    },
+    "dependencies": {
+        "@babel/core": "^7.13.15",
+        "@babel/plugin-syntax-optional-chaining": "^7.8.3",
+        "@babel/preset-env": "^7.13.15",
+        "execa": "^5.0.0"
     }
 }
