--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@babel/core": "^7.13.15",
         "@babel/plugin-syntax-optional-chaining": "^7.8.3",
         "@babel/preset-env": "^7.13.15",
+        "@babel/preset-typescript": "^7.13.0",
         "execa": "^5.0.0"
     }
 }
