--- a/apps/nx-esbuild-e2e/package.json
+++ b/apps/nx-esbuild-e2e/package.json
@@ -2,6 +2,7 @@
     "name": "nx-esbuild-e2e",
     "version": "0.0.1",
     "main": "dist/index.js",
+    "private": true,
     "peerDependencies": {
         "tslib": "^2.1.0"
     }
