Created pulumi nx plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "jestrunner.debugOptions": {
+        "skipFiles": ["<node_internals>/**"],
+        "smartStep": true
+    },
+    "jestrunner.jestPath": "node_modules/jest/bin/jest.js"
 }
