--- a/libs/pulumi/tsconfig.json
+++ b/libs/pulumi/tsconfig.json
@@ -1,13 +1,8 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "files": [],
-  "include": [],
-  "references": [
-    {
-      "path": "./tsconfig.lib.json"
+    "extends": "../../tsconfig.settings.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "types": ["jest", "node"]
     },
-    {
-      "path": "./tsconfig.spec.json"
-    }
-  ]
+    "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
