--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "changesets": "changesets",
         "generate:esbuild-options:build": "pnpx typescript-json-schema node_modules/esbuild/lib/main.d.ts BuildOptions -o libs/nx-esbuild/src/executors/build/schema.json && pnpx json -I -f libs/nx-esbuild/src/executors/build/schema.json -e 'this.cli=\"nx\"' && pnpx json -I -f libs/nx-esbuild/src/executors/build/schema.json -e 'this.title=\"ESBuild Build Executor\"'",
         "generate:esbuild-options:serve": "pnpx typescript-json-schema node_modules/esbuild/lib/main.d.ts BuildOptions -o libs/nx-esbuild/src/executors/serve/schema.json && pnpx json -I -f libs/nx-esbuild/src/executors/serve/schema.json -e 'this.cli=\"nx\"' && pnpx json -I -f libs/nx-esbuild/src/executors/serve/schema.json -e 'this.title=\"ESBuild Serve Executor\"'",
+        "~~~NOTE~~~": "entryPoints and watch dont work properly and need manual changes -- see 44808fb",
         "generate:esbuild-options": "pnpm run generate:esbuild-options:build && pnpm run generate:esbuild-options:serve"
     },
     "private": true,
