NX Plugin for generating a React project with Vite tooling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
             "path": "apps/nx-esbuild-e2e"
         },
         {
+            "path": "libs/nx-vite"
+        },
+        {
+            "path": "apps/nx-vite-e2e"
+        },
+        {
             "path": "libs/pulumi"
         }
     ]
