--- a/nx.json
+++ b/nx.json
@@ -1,29 +1,36 @@
 {
-  "npmScope": "wanews",
-  "affected": { "defaultBase": "master" },
-  "implicitDependencies": {
-    "workspace.json": "*",
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
-    "tsconfig.base.json": "*",
-    "tslint.json": "*",
-    ".eslintrc.json": "*",
-    "nx.json": "*"
-  },
-  "tasksRunnerOptions": {
-    "default": {
-      "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
-    }
-  },
-  "projects": {
-    "typescript-project-references": { "tags": [] },
-    "typescript-project-references-e2e": {
-      "tags": [],
-      "implicitDependencies": ["typescript-project-references"]
+    "npmScope": "wanews",
+    "affected": { "defaultBase": "master" },
+    "implicitDependencies": {
+        "workspace.json": "*",
+        "package.json": { "dependencies": "*", "devDependencies": "*" },
+        "tsconfig.base.json": "*",
+        "tslint.json": "*",
+        ".eslintrc.json": "*",
+        "nx.json": "*"
     },
-    "nx-esbuild": { "tags": [] },
-    "nx-esbuild-e2e": { "tags": [], "implicitDependencies": ["nx-esbuild"] },
-    "pulumi": { "tags": [] },
-    "pulumi-e2e": { "tags": [], "implicitDependencies": ["pulumi"] }
-  }
+    "tasksRunnerOptions": {
+        "default": {
+            "runner": "@nrwl/workspace/tasks-runners/default",
+            "options": {
+                "cacheableOperations": ["build", "lint", "test", "e2e"]
+            }
+        }
+    },
+    "projects": {
+        "typescript-project-references": { "tags": [] },
+        "typescript-project-references-e2e": {
+            "tags": [],
+            "implicitDependencies": ["typescript-project-references"]
+        },
+        "nx-esbuild": { "tags": [] },
+        "nx-esbuild-e2e": {
+            "tags": [],
+            "implicitDependencies": ["nx-esbuild"]
+        },
+        "nx-vite": { "tags": [] },
+        "nx-vite-e2e": { "tags": [], "implicitDependencies": ["nx-vite"] },
+        "pulumi": { "tags": [] },
+        "pulumi-e2e": { "tags": [], "implicitDependencies": ["pulumi"] }
+    }
 }
