Add @nrwl/jest to peerDependencies

--- a/libs/pulumi/package.json
+++ b/libs/pulumi/package.json
@@ -3,5 +3,8 @@
     "version": "0.5.0",
     "main": "src/index.js",
     "generators": "./generators.json",
-    "executors": "./executors.json"
+    "executors": "./executors.json",
+    "peerDependencies": {
+        "@nrwl/jest": ">12.0.0"
+    }
 }
