--- a/libs/nx-esbuild/package.json
+++ b/libs/nx-esbuild/package.json
@@ -8,6 +8,7 @@
     "peerDependencies": {
         "esbuild": ">0.11.0",
         "nodemon": ">2.0.0",
-        "dotenv": ">8.0.0"
+        "dotenv": ">8.0.0",
+        "@nrwl/jest": ">12.0.0"
     }
 }
