--- a/libs/nx-vite/package.json
+++ b/libs/nx-vite/package.json
@@ -11,6 +11,7 @@
         "react": ">17.0.2",
         "react-dom": ">17.0.0",
         "vite": ">2.0.0",
-        "vite-tsconfig-paths": ">3.0.0"
+        "vite-tsconfig-paths": ">3.0.0",
+        "@nrwl/jest": ">12.0.0"
     }
 }
