--- a/libs/typescript-project-references/package.json
+++ b/libs/typescript-project-references/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@wanews/nx-typescript-project-references",
-  "version": "0.8.2",
-  "main": "dist/index.js",
-  "generators": "./generators.json",
-  "executors": "./executors.json",
-  "dependencies": {
-    "@types/fs-extra": "^9.0.11",
-    "execa": "^5.0.0"
-  }
+    "name": "@wanews/nx-typescript-project-references",
+    "version": "0.8.2",
+    "main": "dist/index.js",
+    "generators": "./generators.json",
+    "executors": "./executors.json",
+    "dependencies": {
+        "@types/fs-extra": "^9.0.11",
+        "execa": "^5.0.0"
+    },
+    "peerDependencies": {
+        "@nrwl/jest": ">12.0.0"
+    }
 }
