--- a/libs/nx-esbuild/package.json
+++ b/libs/nx-esbuild/package.json
@@ -4,7 +4,9 @@
     "main": "src/index.js",
     "generators": "./generators.json",
     "executors": "./executors.json",
-    "dependencies": {},
+    "dependencies": {
+        "@pnpm/make-dedicated-lockfile": ">0.2.0"
+    },
     "peerDependencies": {
         "esbuild": ">0.11.0",
         "nodemon": ">2.0.0",
