Add stack name generation for pulumi module so affected:up can be used

--- a/libs/pulumi/package.json
+++ b/libs/pulumi/package.json
@@ -4,6 +4,9 @@
     "main": "src/index.js",
     "generators": "./generators.json",
     "executors": "./executors.json",
+    "dependencies": {
+        "js-yaml": "^4.0.0"
+    },
     "peerDependencies": {
         "@nrwl/jest": ">12.0.0"
     }
