--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@nrwl/tao": "12.1.1",
         "@nrwl/workspace": "12.1.1",
         "@types/jest": "26.0.23",
+        "@types/js-yaml": "^4.0.1",
         "@types/node": "15.0.2",
         "@typescript-eslint/eslint-plugin": "4.22.1",
         "@typescript-eslint/parser": "4.22.1",
