--- a/libs/nx-esbuild/package.json
+++ b/libs/nx-esbuild/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@wanews/nx-esbuild",
     "version": "0.12.1",
+    "license": "MIT",
+    "repository": "https://github.com/sevenwestmedia-labs/nx-plugins",
+    "author": "Seven West Media WA",
     "main": "src/index.js",
     "generators": "./generators.json",
     "executors": "./executors.json",
