--- a/libs/typescript-project-references/package.json
+++ b/libs/typescript-project-references/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@wanews/nx-typescript-project-references",
     "version": "0.9.0",
+    "license": "MIT",
+    "repository": "https://github.com/sevenwestmedia-labs/nx-plugins",
+    "author": "Seven West Media WA",
     "main": "dist/index.js",
     "generators": "./generators.json",
     "executors": "./executors.json",
