--- a/libs/pulumi/.babelrc
+++ b/libs/pulumi/.babelrc
@@ -1,3 +1,6 @@
 {
-  "presets": [["@nrwl/web/babel", { "useBuiltIns": "usage" }]]
+  "presets": [
+    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    "@babel/preset-typescript"
+  ]
 }
