--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "15.0.2",
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
+    "aws-sdk": "^2.963.0",
     "babel-jest": "^26.6.3",
     "dotenv": "10.0.0",
     "esbuild": "^0.11.20",
