--- a/nx.json
+++ b/nx.json
@@ -1,9 +1,14 @@
 {
     "npmScope": "wanews",
-    "affected": { "defaultBase": "master" },
+    "affected": {
+        "defaultBase": "master"
+    },
     "implicitDependencies": {
         "workspace.json": "*",
-        "package.json": { "dependencies": "*", "devDependencies": "*" },
+        "package.json": {
+            "dependencies": "*",
+            "devDependencies": "*"
+        },
         "tsconfig.base.json": "*",
         "tslint.json": "*",
         ".eslintrc.json": "*",
@@ -18,19 +23,41 @@
         }
     },
     "projects": {
-        "typescript-project-references": { "tags": [] },
-        "typescript-project-references-e2e": {
-            "tags": [],
-            "implicitDependencies": ["typescript-project-references"]
+        "nx-esbuild": {
+            "tags": []
         },
-        "nx-esbuild": { "tags": [] },
         "nx-esbuild-e2e": {
             "tags": [],
             "implicitDependencies": ["nx-esbuild"]
         },
-        "nx-vite": { "tags": [] },
-        "nx-vite-e2e": { "tags": [], "implicitDependencies": ["nx-vite"] },
-        "pulumi": { "tags": [] },
-        "pulumi-e2e": { "tags": [], "implicitDependencies": ["pulumi"] }
+        "nx-vite": {
+            "tags": []
+        },
+        "nx-vite-e2e": {
+            "tags": [],
+            "implicitDependencies": ["nx-vite"]
+        },
+        "pulumi": {
+            "tags": []
+        },
+        "pulumi-e2e": {
+            "tags": [],
+            "implicitDependencies": ["pulumi"]
+        },
+        "typescript-project-references": {
+            "tags": []
+        },
+        "typescript-project-references-e2e": {
+            "tags": [],
+            "implicitDependencies": ["typescript-project-references"]
+        }
+    },
+    "targetDependencies": {
+        "build": [
+            {
+                "target": "build",
+                "projects": "dependencies"
+            }
+        ]
     }
 }
