--- a/libs/nx-vite/package.json
+++ b/libs/nx-vite/package.json
@@ -7,14 +7,11 @@
     "main": "src/index.js",
     "generators": "./generators.json",
     "executors": "./executors.json",
-    "dependencies": {},
+    "dependencies": {
+        "execa": "^5.0.0"
+    },
     "peerDependencies": {
-        "@vitejs/plugin-react-refresh": ">1.0.0",
-        "nodemon": ">2.0.0",
-        "react": ">17.0.2",
-        "react-dom": ">17.0.0",
         "vite": ">2.0.0",
-        "vite-tsconfig-paths": ">3.0.0",
-        "@nrwl/jest": ">12.0.0"
+        "vite-tsconfig-paths": ">3.0.0"
     }
 }
