Switch changesets to use @changesets/changelog-github

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "private": true,
   "devDependencies": {
     "@angular-devkit/core": "^11.2.12",
+    "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
     "@nrwl/cli": "12.7.1",
     "@nrwl/devkit": "12.7.1",
@@ -49,7 +50,6 @@
     "@types/node": "15.0.2",
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
-
     "babel-jest": "^26.6.3",
     "dotenv": "10.0.0",
     "esbuild": "^0.11.20",
