--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
     "$schema": "https://unpkg.com/@changesets/config@1.5.0/schema.json",
-    "changelog": "@changesets/changelog-github",
+    "changelog": [
+        "@changesets/changelog-github",
+        { "repo": "sevenwestmedia-labs/nx-plugins" }
+    ],
     "commit": false,
     "linked": [],
     "access": "public",
