--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,38 +20,6 @@ jobs:
           token: ${{ secrets.SERVICE_ACCOUNT_PAT }}
 
       - name: Enable node
-        uses: actions/setup-node@main
-        with:
-          node-version: 14.x
-
-      - name: Version command
-        id: version
-        run: |
-          npm install --no-package-lock --no-save @changesets/cli
-          echo ::set-output name=changes::$(npx changeset version 2>&1 | grep -q 'No unreleased changesets found' && echo 'false' || echo 'true')
-        env:
-          GITHUB_TOKEN: ${{ secrets.SERVICE_ACCOUNT_PAT }}
-
-      - name: Push changes
-        if: steps.version.outputs.changes == 'true'
-        run: |
-          git config user.email "github.serviceaccount@wanews.com.au"
-          git config user.name "SWM GitHub Service Account"
-          git add -A
-          git commit -m "Version packages" || echo "No changes to commit"
-          git push
-  build:
-    runs-on: ubuntu-latest
-    needs: version
-    if: always() && needs.version.outputs.changes == 'false'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-        with:
-          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
-          fetch-depth: 0
-
-      - name: Enable node
         uses: actions/setup-node@master
         with:
           node-version: 14.x
@@ -70,9 +38,29 @@ jobs:
         run: |
           npm i -g pnpm
           pnpm set verify-store-integrity false
+
       - name: pnpm install
         run: |
           pnpm install --frozen-lockfile
+
+      - name: Version command
+        id: version
+        run: |
+          pnpx changeset version
+        env:
+          GITHUB_TOKEN: ${{ secrets.SERVICE_ACCOUNT_PAT }}
+
+      - name: pnpm install
+        run: |
+          pnpm install
+
+      - name: Push changes
+        run: |
+          git config user.email "github.serviceaccount@wanews.com.au"
+          git config user.name "SWM GitHub Service Account"
+          git add -A
+          git commit -m "Version packages" || echo "No changes to commit"
+          git push
 
       - name: type scheck
         run: pnpx tsc -b
