--- a/libs/pulumi/package.json
+++ b/libs/pulumi/package.json
@@ -8,9 +8,11 @@
     "generators": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
+        "execa": "^5.0.0",
         "js-yaml": "^4.0.0"
     },
     "peerDependencies": {
+        "@nrwl/devkit": ">12.0.0",
         "@nrwl/jest": ">12.0.0"
     }
 }
