--- a/libs/pulumi/package.json
+++ b/libs/pulumi/package.json
@@ -13,6 +13,7 @@
     },
     "peerDependencies": {
         "@nrwl/devkit": ">12.0.0",
-        "@nrwl/jest": ">12.0.0"
+        "@nrwl/jest": ">12.0.0",
+        "aws-sdk": ">2.800.0"
     }
 }
