--- a/package.json
+++ b/package.json
@@ -36,30 +36,30 @@
     "@angular-devkit/core": "^11.2.12",
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
-    "@nrwl/cli": "12.7.1",
-    "@nrwl/devkit": "12.7.1",
-    "@nrwl/eslint-plugin-nx": "12.7.1",
-    "@nrwl/jest": "12.7.1",
-    "@nrwl/linter": "12.7.1",
-    "@nrwl/node": "12.7.1",
-    "@nrwl/nx-plugin": "12.7.1",
-    "@nrwl/tao": "12.7.1",
-    "@nrwl/workspace": "12.7.1",
-    "@types/jest": "26.0.23",
+    "@nrwl/cli": "12.10.0",
+    "@nrwl/devkit": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/linter": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/nx-plugin": "12.10.0",
+    "@nrwl/tao": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
+    "@types/jest": "27.0.2",
     "@types/js-yaml": "^4.0.1",
     "@types/node": "15.0.2",
-    "@typescript-eslint/eslint-plugin": "4.28.5",
-    "@typescript-eslint/parser": "4.28.5",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "aws-sdk": "^2.963.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "27.2.3",
     "dotenv": "10.0.0",
     "esbuild": "^0.11.20",
     "eslint": "7.26.0",
     "eslint-config-prettier": "8.3.0",
-    "jest": "27.0.3",
+    "jest": "27.2.3",
     "json": "^11.0.0",
-    "prettier": "2.3.2",
-    "ts-jest": "27.0.3",
+    "prettier": "2.4.1",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
     "tslib": "^2.2.0",
     "typescript": "4.3.5",
@@ -75,3 +75,4 @@
     "regenerator-runtime": "^0.13.7"
   }
 }
+
