--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["esbenp.prettier-vscode", "firsttris.vscode-jest-runner"]
+    "recommendations": [
+        "esbenp.prettier-vscode",
+        "firsttris.vscode-jest-runner"
+    ]
 }
