--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -1,13 +1,10 @@
 {
-  "extends": "./tsconfig.base.json",
-  "compilerOptions": {
-    "declaration": true,
-    "noEmit": false,
-    "composite": true,
-    "incremental": true
-  },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+    "extends": "./tsconfig.base.json",
+    "compilerOptions": {
+        "declaration": true,
+        "noEmit": false,
+        "composite": true,
+        "incremental": true
+    },
+    "exclude": ["node_modules", "tmp"]
 }
