--- a/libs/typescript-project-references/package.json
+++ b/libs/typescript-project-references/package.json
@@ -8,13 +8,11 @@
     "generators": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
-        "@types/fs-extra": "^9.0.11",
         "execa": "^5.0.0"
     },
     "peerDependencies": {
         "@nrwl/devkit": ">12.0.0",
         "@nrwl/tao": ">12.0.0",
-        "@nrwl/workspace": ">12.0.0",
-        "@nrwl/jest": ">12.0.0"
+        "@nrwl/workspace": ">12.0.0"
     }
 }
