--- a/libs/nx-vite/package.json
+++ b/libs/nx-vite/package.json
@@ -14,6 +14,7 @@
         "@nrwl/devkit": ">12.0.0",
         "@nrwl/tao": ">12.0.0",
         "vite": ">2.0.0",
-        "vite-tsconfig-paths": ">3.0.0"
+        "vite-tsconfig-paths": ">3.0.0",
+        "vitest": "^0.0.102"
     }
 }
