--- a/libs/nx-esbuild/package.json
+++ b/libs/nx-esbuild/package.json
@@ -8,8 +8,8 @@
     "generators": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
-        "@pnpm/make-dedicated-lockfile": ">0.2.0",
-        "execa": "^5.0.0"
+        "@pnpm/make-dedicated-lockfile": "^0.2.18",
+        "execa": "^5.1.1"
     },
     "peerDependencies": {
         "@nrwl/devkit": ">12.0.0",
