--- a/apps/nx-vite-e2e/tsconfig.json
+++ b/apps/nx-vite-e2e/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./tests",
-        "types": ["jest", "node"]
+        "types": ["node"]
     },
     "include": ["tests/**/*.ts", "tests/**/*.tsx"]
 }
