--- a/libs/nx-vite/tsconfig.json
+++ b/libs/nx-vite/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.settings.json",
     "compilerOptions": {
         "rootDir": "./src",
-        "types": ["jest", "node"]
+        "types": ["node"]
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
