--- a/apps/nx-esbuild-e2e/project.json
+++ b/apps/nx-esbuild-e2e/project.json
@@ -8,7 +8,7 @@
             "options": {
                 "commands": [
                     "npx nx run nx-esbuild:build",
-                    "npx vitest --run apps/nx-esbuild-e2e/tests"
+                    "npx vitest --run --config apps/nx-esbuild-e2e/vitest.config.ts"
                 ],
                 "parallel": false
             }
