--- a/apps/pulumi-e2e/project.json
+++ b/apps/pulumi-e2e/project.json
@@ -8,7 +8,7 @@
             "options": {
                 "commands": [
                     "npx nx run pulumi:build",
-                    "npx vitest --run apps/pulumi-e2e/tests"
+                    "npx vitest --run --config apps/pulumi-e2e/vitest.config.ts"
                 ],
                 "parallel": false
             }
