--- a/apps/typescript-project-references-e2e/project.json
+++ b/apps/typescript-project-references-e2e/project.json
@@ -8,7 +8,7 @@
             "options": {
                 "commands": [
                     "npx nx run typescript-project-references:build",
-                    "npx vitest --run apps/typescript-project-references-e2e/tests"
+                    "npx vitest --run --config apps/typescript-project-references-e2e/vitest.config.ts"
                 ],
                 "parallel": false
             }
