--- a/apps/typescript-project-references-e2e/project.json
+++ b/apps/typescript-project-references-e2e/project.json
@@ -7,6 +7,7 @@
             "executor": "@nrwl/workspace:run-commands",
             "options": {
                 "commands": [
+                    "npx nx run nx-esbuild:build",
                     "npx nx run typescript-project-references:build",
                     "npx vitest --run --config apps/typescript-project-references-e2e/vitest.config.ts"
                 ],
