--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,8 @@
 {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "jestrunner.debugOptions": {
-        "skipFiles": ["<node_internals>/**"],
-        "smartStep": true
-    },
-    "jestrunner.jestPath": "node_modules/jest/bin/jest.js",
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
-    }
+    },
+    "cSpell.enabled": false
 }
