--- a/libs/nx-vite/package.json
+++ b/libs/nx-vite/package.json
@@ -8,12 +8,13 @@
     "generators": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
-        "execa": "^5.0.0"
+        "execa": "^5.1.1"
     },
     "peerDependencies": {
         "@nrwl/devkit": ">12.0.0",
         "@nrwl/tao": ">12.0.0",
         "vite": ">2.0.0",
-        "vite-tsconfig-paths": ">3.0.0"
+        "vite-tsconfig-paths": ">3.0.0",
+        "vitest": "^0.0.102"
     }
 }
