--- a/libs/typescript-project-references/package.json
+++ b/libs/typescript-project-references/package.json
@@ -8,7 +8,8 @@
     "generators": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
-        "execa": "^5.1.1"
+        "execa": "^5.1.1",
+        "tsup": "^5.11.11"
     },
     "peerDependencies": {
         "@nrwl/devkit": ">12.0.0",
