--- a/libs/pulumi/package.json
+++ b/libs/pulumi/package.json
@@ -13,6 +13,6 @@
     },
     "peerDependencies": {
         "@nrwl/devkit": ">12.0.0",
-        "aws-sdk": ">2.800.0"
+        "@aws-sdk/client-s3": "^3.58.0"
     }
 }
