--- a/package.json
+++ b/package.json
@@ -1,67 +1,66 @@
 {
-  "name": "nx-generators",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "nx": "nx",
-    "start": "nx serve",
-    "build": "nx run-many --target=build --all",
-    "test": "nx run-many --target=test --all",
-    "lint": "nx workspace-lint && nx run-many --all --target=lint",
-    "e2e": "nx run-many --target=e2e --all",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "preinstall": "npx only-allow pnpm",
-    "changesets": "changesets",
-    "generate:esbuild-options:build": "pnpx typescript-json-schema node_modules/esbuild/lib/main.d.ts BuildOptions -o libs/nx-esbuild/src/executors/build/schema.json && pnpx json -I -f libs/nx-esbuild/src/executors/build/schema.json -e 'this.cli=\"nx\"' && pnpx json -I -f libs/nx-esbuild/src/executors/build/schema.json -e 'this.title=\"ESBuild Build Executor\"'",
-    "generate:esbuild-options:serve": "pnpx typescript-json-schema node_modules/esbuild/lib/main.d.ts BuildOptions -o libs/nx-esbuild/src/executors/serve/schema.json && pnpx json -I -f libs/nx-esbuild/src/executors/serve/schema.json -e 'this.cli=\"nx\"' && pnpx json -I -f libs/nx-esbuild/src/executors/serve/schema.json -e 'this.title=\"ESBuild Serve Executor\"'",
-    "~~~NOTE~~~": "entryPoints and watch dont work properly and need manual changes -- see 44808fb",
-    "generate:esbuild-options": "pnpm run generate:esbuild-options:build && pnpm run generate:esbuild-options:serve"
-  },
-  "private": true,
-  "devDependencies": {
-    "@changesets/changelog-github": "^0.4.2",
-    "@changesets/cli": "^2.19.0",
-    "@nrwl/cli": "13.4.1",
-    "@nrwl/devkit": "13.4.1",
-    "@nrwl/eslint-plugin-nx": "13.4.1",
-    "@nrwl/linter": "13.4.1",
-    "@nrwl/nx-plugin": "13.4.1",
-    "@nrwl/tao": "13.4.1",
-    "@nrwl/workspace": "13.4.1",
-    "@types/js-yaml": "^4.0.5",
-    "@types/node": "17.0.6",
-    "@typescript-eslint/eslint-plugin": "5.8.1",
-    "@typescript-eslint/parser": "5.8.1",
-    "aws-sdk": "^2.1048.0",
-    "dotenv": "10.0.0",
-    "esbuild": "^0.14.10",
-    "eslint": "8.6.0",
-    "eslint-config-prettier": "8.3.0",
-    "json": "^11.0.0",
-    "prettier": "2.5.1",
-    "ts-node": "~10.4.0",
-    "tslib": "^2.3.1",
-    "typescript": "4.5.4",
-    "typescript-json-schema": "^0.52.0",
-    "vite": "^2.7.10",
-    "vitest": "^0.0.126"
-  },
-  "dependencies": {
-    "execa": "^5.1.1"
-  }
+    "name": "nx-generators",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "nx": "nx",
+        "start": "nx serve",
+        "build": "nx run-many --target=build --all",
+        "test": "nx run-many --target=test --all",
+        "lint": "nx workspace-lint && nx run-many --all --target=lint",
+        "e2e": "nx run-many --target=e2e --all",
+        "affected:apps": "nx affected:apps",
+        "affected:libs": "nx affected:libs",
+        "affected:build": "nx affected:build",
+        "affected:e2e": "nx affected:e2e",
+        "affected:test": "nx affected:test",
+        "affected:lint": "nx affected:lint",
+        "affected:dep-graph": "nx affected:dep-graph",
+        "affected": "nx affected",
+        "format": "nx format:write",
+        "format:write": "nx format:write",
+        "format:check": "nx format:check",
+        "update": "nx migrate latest",
+        "workspace-generator": "nx workspace-generator",
+        "dep-graph": "nx dep-graph",
+        "help": "nx help",
+        "preinstall": "npx only-allow pnpm",
+        "changesets": "changesets",
+        "generate:esbuild-options:build": "pnpx typescript-json-schema node_modules/esbuild/lib/main.d.ts BuildOptions -o libs/nx-esbuild/src/executors/build/schema.json && pnpx json -I -f libs/nx-esbuild/src/executors/build/schema.json -e 'this.cli=\"nx\"' && pnpx json -I -f libs/nx-esbuild/src/executors/build/schema.json -e 'this.title=\"ESBuild Build Executor\"'",
+        "generate:esbuild-options:serve": "pnpx typescript-json-schema node_modules/esbuild/lib/main.d.ts BuildOptions -o libs/nx-esbuild/src/executors/serve/schema.json && pnpx json -I -f libs/nx-esbuild/src/executors/serve/schema.json -e 'this.cli=\"nx\"' && pnpx json -I -f libs/nx-esbuild/src/executors/serve/schema.json -e 'this.title=\"ESBuild Serve Executor\"'",
+        "~~~NOTE~~~": "entryPoints and watch dont work properly and need manual changes -- see 44808fb",
+        "generate:esbuild-options": "pnpm run generate:esbuild-options:build && pnpm run generate:esbuild-options:serve"
+    },
+    "private": true,
+    "devDependencies": {
+        "@changesets/changelog-github": "^0.4.2",
+        "@changesets/cli": "^2.19.0",
+        "@nrwl/cli": "13.4.1",
+        "@nrwl/devkit": "13.9.5",
+        "@nrwl/eslint-plugin-nx": "13.9.5",
+        "@nrwl/linter": "13.9.5",
+        "@nrwl/nx-plugin": "13.9.5",
+        "@nrwl/workspace": "13.9.5",
+        "@types/js-yaml": "^4.0.5",
+        "@types/node": "17.0.6",
+        "@typescript-eslint/eslint-plugin": "5.10.2",
+        "@typescript-eslint/parser": "5.10.2",
+        "@aws-sdk/client-s3": "^3.58.0",
+        "dotenv": "10.0.0",
+        "esbuild": "^0.14.10",
+        "eslint": "8.7.0",
+        "eslint-config-prettier": "8.3.0",
+        "json": "^11.0.0",
+        "prettier": "2.6.1",
+        "ts-node": "~10.4.0",
+        "tslib": "^2.3.1",
+        "typescript": "4.5.4",
+        "typescript-json-schema": "^0.52.0",
+        "vite": "^2.7.10",
+        "vitest": "^0.0.126",
+        "nx": "13.9.5"
+    },
+    "dependencies": {
+        "execa": "^5.1.1"
+    }
 }
-
