Switch from pnpx to pnpm

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Version command
         id: version
         run: |
-          pnpx changeset version
+          pnpm changeset version
         env:
           GITHUB_TOKEN: ${{ secrets.SERVICE_ACCOUNT_PAT }}
 
@@ -63,7 +63,7 @@ jobs:
           git push
 
       - name: typecheck
-        run: pnpx tsc -b
+        run: pnpm tsc -b
 
       - name: Build packages
         run: pnpm run build
@@ -80,6 +80,6 @@ jobs:
       - name: Release packages
         uses: changesets/action@master
         with:
-          publish: pnpx changeset publish
+          publish: pnpm changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.SERVICE_ACCOUNT_PAT }}
