Upgrade NX and remove import of FsTree which is a private import which path keeps changing

--- a/libs/nx-vite/project.json
+++ b/libs/nx-vite/project.json
@@ -1,18 +1,13 @@
 {
-    "root": "libs/nx-vite",
     "sourceRoot": "libs/nx-vite/src",
     "projectType": "library",
     "targets": {
         "lint": {
             "executor": "@nrwl/linter:eslint",
             "options": {
-                "lintFilePatterns": [
-                    "libs/nx-vite/**/*.ts"
-                ]
+                "lintFilePatterns": ["libs/nx-vite/**/*.ts"]
             },
-            "outputs": [
-                "{options.outputFile}"
-            ]
+            "outputs": ["{options.outputFile}"]
         },
         "test": {
             "executor": "@nrwl/workspace:run-commands",
