--- a/libs/typescript-project-references/project.json
+++ b/libs/typescript-project-references/project.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/typescript-project-references/src",
     "projectType": "library",
     "targets": {
